simple integration with server

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -30,6 +30,7 @@
 
     <div class="container">
         <img id="main-image" class='img-responsive' src='http://www.todonatacion.com/images/mano.jpg'> </img>
+        <input type='text' id='numbers-input'>Texto</input>
     </div>
 
     <!-- build:js scripts/vendor.js -->
