swap jasmine for mocha runner

--- a/client/test/index.html
+++ b/client/test/index.html
@@ -10,21 +10,18 @@
   <script src="../bower_components/mocha/mocha.js"></script>
   <script>mocha.setup('bdd');</script>
   <script src="../bower_components/chai/chai.js"></script>
-  <script>
-    var assert = chai.assert;
-    var expect = chai.expect;
-    var should = chai.should();
-  </script>
   <!-- bower:js -->
   <!-- endbower -->
   <!-- include source files here... -->
-  <script src="scripts/matchlist.js"></script>
+  <script src="../app/scripts/matchlist.js"></script>
+  <script src="../app/scripts/consonantstable.js"></script>
+  <script src="../app/scripts/mnemonic.js"></script>
+
   <!-- include spec files here... -->
   <script src="spec/test.js"></script>
+
   <script>
-    if (navigator.userAgent.indexOf('PhantomJS') === -1) {
-      mocha.run();
-    }
+    mocha.run();
   </script>
 </body>
 </html>
