--- a/client/test/index.html
+++ b/client/test/index.html
@@ -10,12 +10,23 @@
   <script src="../bower_components/mocha/mocha.js"></script>
   <script>mocha.setup('bdd');</script>
   <script src="../bower_components/chai/chai.js"></script>
+  <script src="../bower_components/sinon/lib/sinon.js"></script>
+  <script src="../bower_components/sinon/lib/sinon/util/core.js"></script>
+  <script src="../bower_components/sinon/lib/sinon/log_error.js"></script>
+  <script src="../bower_components/sinon/lib/sinon/extend.js"></script>
+  <script src="../bower_components/sinon/lib/sinon/format.js"></script>
+  <script src="../bower_components/sinon/lib/sinon/util/event.js"></script>
+  <script src="../bower_components/sinon/lib/sinon/util/fake_xdomain_request.js"></script>
+  <script src="../bower_components/sinon/lib/sinon/util/fake_xml_http_request.js"></script>
+  <script src="../bower_components/sinon/lib/sinon/util/fake_server.js"></script>
+  <script src="../bower_components/jquery/dist/jquery.min.js"></script>
   <!-- bower:js -->
   <!-- endbower -->
   <!-- include source files here... -->
   <script src="../app/scripts/matchlist.js"></script>
   <script src="../app/scripts/consonantstable.js"></script>
   <script src="../app/scripts/mnemonic.js"></script>
+  <script src="../app/scripts/main.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/test.js"></script>
@@ -23,5 +34,8 @@
   <script>
     mocha.run();
   </script>
+
+  <div id="test-container">
+  </div>
 </body>
 </html>
