--- a/client/app/index.html
+++ b/client/app/index.html
@@ -55,6 +55,9 @@
     <!-- endbuild -->
 
     <!-- build:js scripts/main.js -->
+    <script src="scripts/matchlist.js"></script>
+    <script src="scripts/consonantstable.js"></script>
+    <script src="scripts/mnemonic.js"></script>
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
   </body>
