--- a/client/test/index.html
+++ b/client/test/index.html
@@ -8,6 +8,7 @@
 <body>
   <div id="mocha"></div>
   <script src="../bower_components/mocha/mocha.js"></script>
+  <script src="../bower_components/jquery/dist/jquery.min.js"></script>
   <script>mocha.setup('bdd');</script>
   <script src="../bower_components/chai/chai.js"></script>
   <script src="../bower_components/sinon/lib/sinon.js"></script>
@@ -20,6 +21,11 @@
   <script src="../bower_components/sinon/lib/sinon/util/fake_xml_http_request.js"></script>
   <script src="../bower_components/sinon/lib/sinon/util/fake_server.js"></script>
   <script src="../bower_components/jquery/dist/jquery.min.js"></script>
+  <script>
+    var assert = chai.assert;
+    var expect = chai.expect;
+    var should = chai.should();
+  </script>
   <!-- bower:js -->
   <!-- endbower -->
   <!-- include source files here... -->
@@ -30,11 +36,9 @@
 
   <!-- include spec files here... -->
   <script src="spec/test.js"></script>
-
   <script>
-    mocha.run();
+      mocha.run();
   </script>
-
   <div id="test-container">
   </div>
 </body>
