--- a/client/app/index.html
+++ b/client/app/index.html
@@ -27,10 +27,33 @@
     <!--[if lt IE 10]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+    <nav class="navbar navbar-default" role="navigation">
+      <div class="collapse navbar-collapse">
+        <div class="col-md-offset-4 col-sm-4">
+          <form class="navbar-form" role="search">
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="Search" id="numbers-input">
+              <div class="input-group-btn">
+                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div><!-- /.navbar-collapse -->
+    </nav>
 
     <div class="container">
-        <img id="main-image" class='img-responsive' src='http://www.todonatacion.com/images/mano.jpg'> </img>
-        <input type='text' id='numbers-input'>Texto</input>
+      <div class="row images-row viewport-height" >
+        <div class="col-md-4">
+          <img class='img-responsive' src='http://www.todonatacion.com/images/mano.jpg'> </img>
+        </div>
+        <div class="col-md-4">
+          <img class='img-responsive' src='http://www.todonatacion.com/images/mano.jpg'> </img>
+        </div>
+        <div class="col-md-4">
+          <img class='img-responsive' src='http://www.todonatacion.com/images/mano.jpg'> </img>
+        </div>
+      </div>
     </div>
 
     <!-- build:js scripts/vendor.js -->
