prevent search on empty input

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -81,6 +81,7 @@
     <script src="scripts/matchlist.js"></script>
     <script src="scripts/consonantstable.js"></script>
     <script src="scripts/mnemonic.js"></script>
+    <script src="scripts/helpers.js"></script>
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
   </body>
