--- a/client/test/index.html
+++ b/client/test/index.html
@@ -39,7 +39,6 @@
   <script>
       mocha.run();
   </script>
-  <div id="test-container">
-  </div>
+  <div id="test-container"> </div>
 </body>
 </html>
