--- a/client/app/index.html
+++ b/client/app/index.html
@@ -29,7 +29,7 @@
     <![endif]-->
     <nav class="navbar navbar-default" role="navigation">
       <div class="collapse navbar-collapse">
-        <div class="col-md-offset-4 col-sm-4">
+        <div class="col-xs-offset-4 col-xs-4">
           <form class="navbar-form" role="search">
             <div class="input-group">
               <input type="text" class="form-control" placeholder="Search" id="numbers-input">
@@ -44,14 +44,37 @@
 
     <div class="container">
       <div class="row images-row viewport-height" >
-        <div class="col-md-4">
-          <img class='img-responsive' src='http://www.todonatacion.com/images/mano.jpg'> </img>
+        <div class="col-md-4 col-xs-4">
+          <a class="thumbnail">
+            <img class='img-responsive' src='http://www.todonatacion.com/images/mano.jpg'/>
+          </a>
         </div>
-        <div class="col-md-4">
-          <img class='img-responsive' src='http://www.todonatacion.com/images/mano.jpg'> </img>
+        <div class="col-md-4 col-xs-4">
+          <a class="thumbnail">
+            <img class='img-responsive' src='http://www.todonatacion.com/images/mano.jpg'/>
+          </a>
         </div>
-        <div class="col-md-4">
-          <img class='img-responsive' src='http://www.todonatacion.com/images/mano.jpg'> </img>
+        <div class="col-md-4 col-xs-4">
+          <a class="thumbnail">
+            <img class='img-responsive' src='http://www.todonatacion.com/images/mano.jpg'/>
+          </a>
+        </div>
+      </div>
+      <div class="row images-row viewport-height" >
+        <div class="col-md-4 col-xs-4">
+          <a class="thumbnail">
+            <img class='img-responsive' src='https://s-media-cache-ak0.pinimg.com/564x/8a/30/89/8a30894b407ca6f08bdd7036010c2d2c.jpg'> </img>
+          </a>
+        </div>
+        <div class="col-md-4 col-xs-4">
+          <a class="thumbnail">
+            <img class='img-responsive' src='https://s-media-cache-ak0.pinimg.com/564x/8a/30/89/8a30894b407ca6f08bdd7036010c2d2c.jpg'> </img>
+          </a>
+        </div>
+        <div class="col-md-4 col-xs-4">
+          <a class="thumbnail">
+            <img class='img-responsive' src='https://s-media-cache-ak0.pinimg.com/564x/8a/30/89/8a30894b407ca6f08bdd7036010c2d2c.jpg'> </img>
+          </a>
         </div>
       </div>
     </div>
