restyle search input

--- a/client/test/index.html
+++ b/client/test/index.html
@@ -28,7 +28,14 @@
   </script>
   <!-- bower:js -->
   <!-- endbower -->
+
+  <div id="test-container">
+    <!-- <div id='numbers-input'></div> -->
+    <!-- <div id='search-button'></div> -->
+  </div>
+
   <!-- include source files here... -->
+  <script src="../app/scripts/helpers.js"></script>
   <script src="../app/scripts/matchlist.js"></script>
   <script src="../app/scripts/consonantstable.js"></script>
   <script src="../app/scripts/mnemonic.js"></script>
@@ -39,6 +46,5 @@
   <script>
       mocha.run();
   </script>
-  <div id="test-container"> </div>
 </body>
 </html>
