--- a/client/app/index.html
+++ b/client/app/index.html
@@ -27,22 +27,22 @@
     <!--[if lt IE 10]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <nav class="navbar navbar-default" role="navigation">
-      <div class="collapse navbar-collapse">
-        <div class="col-xs-offset-4 col-xs-4">
-          <form class="navbar-form" role="search">
+    <nav class="mynavbar">
+      <div class="container">
+        <div class="col-xs-offset-2 col-xs-8 col-sm-4 col-sm-offset-4">
+          <div class="navbar-form" role="search">
             <div class="input-group">
               <input type="text" class="form-control" placeholder="Search" id="numbers-input">
               <div class="input-group-btn">
-                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                <button id="search-button" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
               </div>
             </div>
-          </form>
+          </div>
         </div>
-      </div><!-- /.navbar-collapse -->
+      </div>
     </nav>
 
-    <div class="container">
+    <div class="container" id="image-grid">
       <div class="row images-row viewport-height" >
         <div class="col-md-4 col-xs-4">
           <a class="thumbnail">
