--- a/client/app/index.html
+++ b/client/app/index.html
@@ -32,7 +32,7 @@
         <div class="col-xs-offset-2 col-xs-8 col-sm-4 col-sm-offset-4">
           <div class="navbar-form" role="search">
             <div class="input-group">
-              <input type="text" class="form-control" placeholder="Search" id="numbers-input">
+              <input type="text" class="form-control" placeholder="Buscar" id="numbers-input">
               <div class="input-group-btn">
                 <button id="search-button" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
               </div>
@@ -43,6 +43,12 @@
     </nav>
 
     <div class="container" id="image-grid">
+      <div class="row">
+        <div class="col-sm-offset-3 col-sm-6">
+          <h1 id="result-word" class="text-center"><small>Introduce un número</small></h1>
+        </div>
+      </div>
+
       <div class="row images-row viewport-height" >
         <div class="col-md-4 col-xs-4">
           <a class="thumbnail">
