--- a/client/app/index.html
+++ b/client/app/index.html
@@ -42,13 +42,15 @@
       </div>
     </nav>
 
-    <div class="container" id="image-grid">
+    <div class="container">
       <div class="row">
         <div class="col-sm-offset-3 col-sm-6">
           <h1 id="result-word" class="text-center"><small>Introduce un número</small></h1>
         </div>
       </div>
+    </div>
 
+    <div class="container" id="image-grid">
       <div class="row images-row viewport-height" >
         <div class="col-md-4 col-xs-4">
           <a class="thumbnail">
