image grid with masonry

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -50,39 +50,37 @@
       </div>
     </div>
 
-    <div class="container" id="image-grid">
-      <div class="row images-row viewport-height" >
-        <div class="col-md-4 col-xs-4">
-          <a class="thumbnail">
-            <img class='img-responsive' src='http://www.todonatacion.com/images/mano.jpg'/>
-          </a>
+    <div class="container">
+      <div class="row" id="image-grid">
+        <div class="grid-item col-md-4 col-xs-4">
+            <a class="thumbnail">
+              <img class='img-responsive' src='http://www.todonatacion.com/images/mano.jpg'/>
+            </a>
         </div>
-        <div class="col-md-4 col-xs-4">
-          <a class="thumbnail">
-            <img class='img-responsive' src='http://www.todonatacion.com/images/mano.jpg'/>
-          </a>
+        <div class="grid-item col-md-4 col-xs-4">
+            <a class="thumbnail">
+              <img class='img-responsive' src='http://www.todonatacion.com/images/mano.jpg'/>
+            </a>
         </div>
-        <div class="col-md-4 col-xs-4">
-          <a class="thumbnail">
-            <img class='img-responsive' src='http://www.todonatacion.com/images/mano.jpg'/>
-          </a>
+        <div class="grid-item col-md-4 col-xs-4">
+            <a class="thumbnail">
+              <img class='img-responsive' src='http://www.todonatacion.com/images/mano.jpg'/>
+            </a>
         </div>
-      </div>
-      <div class="row images-row viewport-height" >
-        <div class="col-md-4 col-xs-4">
-          <a class="thumbnail">
-            <img class='img-responsive' src='https://s-media-cache-ak0.pinimg.com/564x/8a/30/89/8a30894b407ca6f08bdd7036010c2d2c.jpg'> </img>
-          </a>
+        <div class="grid-item col-md-4 col-xs-4">
+            <a class="thumbnail">
+              <img class='img-responsive' src='https://s-media-cache-ak0.pinimg.com/564x/8a/30/89/8a30894b407ca6f08bdd7036010c2d2c.jpg'> </img>
+            </a>
         </div>
-        <div class="col-md-4 col-xs-4">
-          <a class="thumbnail">
-            <img class='img-responsive' src='https://s-media-cache-ak0.pinimg.com/564x/8a/30/89/8a30894b407ca6f08bdd7036010c2d2c.jpg'> </img>
-          </a>
+        <div class="grid-item col-md-4 col-xs-4">
+            <a class="thumbnail">
+              <img class='img-responsive' src='https://s-media-cache-ak0.pinimg.com/564x/8a/30/89/8a30894b407ca6f08bdd7036010c2d2c.jpg'> </img>
+            </a>
         </div>
-        <div class="col-md-4 col-xs-4">
-          <a class="thumbnail">
-            <img class='img-responsive' src='https://s-media-cache-ak0.pinimg.com/564x/8a/30/89/8a30894b407ca6f08bdd7036010c2d2c.jpg'> </img>
-          </a>
+        <div class="grid-item col-md-4 col-xs-4">
+            <a class="thumbnail">
+              <img class='img-responsive' src='https://s-media-cache-ak0.pinimg.com/564x/8a/30/89/8a30894b407ca6f08bdd7036010c2d2c.jpg'> </img>
+            </a>
         </div>
       </div>
     </div>
@@ -90,6 +88,7 @@
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
+    <script src="/bower_components/masonry/dist/masonry.pkgd.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -106,6 +105,7 @@
     <script src="/bower_components/bootstrap/js/scrollspy.js"></script>
     <script src="/bower_components/bootstrap/js/collapse.js"></script>
     <script src="/bower_components/bootstrap/js/tab.js"></script>
+    <script src="/bower_components/imagesloaded/imagesloaded.js"></script>
     <!-- endbuild -->
 
     <!-- build:js scripts/main.js -->
@@ -115,5 +115,5 @@
     <script src="scripts/helpers.js"></script>
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
-  </body>
-</html>
+    </body>
+    </html>
