improve dev placeholders

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -54,32 +54,32 @@
       <div class="row" id="image-grid">
         <div class="grid-item col-md-4 col-xs-4">
             <a class="thumbnail">
-              <img class='img-responsive' src='http://www.todonatacion.com/images/mano.jpg'/>
+              <img class='img-responsive' src='images/test_1.jpg'/>
             </a>
         </div>
         <div class="grid-item col-md-4 col-xs-4">
             <a class="thumbnail">
-              <img class='img-responsive' src='http://www.todonatacion.com/images/mano.jpg'/>
+              <img class='img-responsive' src='images/test_2.jpg'/>
             </a>
         </div>
         <div class="grid-item col-md-4 col-xs-4">
             <a class="thumbnail">
-              <img class='img-responsive' src='http://www.todonatacion.com/images/mano.jpg'/>
+              <img class='img-responsive' src='images/test_3.jpg'/>
             </a>
         </div>
         <div class="grid-item col-md-4 col-xs-4">
             <a class="thumbnail">
-              <img class='img-responsive' src='https://s-media-cache-ak0.pinimg.com/564x/8a/30/89/8a30894b407ca6f08bdd7036010c2d2c.jpg'> </img>
+              <img class='img-responsive' src='images/test_4.jpg'/>
             </a>
         </div>
         <div class="grid-item col-md-4 col-xs-4">
             <a class="thumbnail">
-              <img class='img-responsive' src='https://s-media-cache-ak0.pinimg.com/564x/8a/30/89/8a30894b407ca6f08bdd7036010c2d2c.jpg'> </img>
+              <img class='img-responsive' src='images/test_5.jpg'/>
             </a>
         </div>
         <div class="grid-item col-md-4 col-xs-4">
             <a class="thumbnail">
-              <img class='img-responsive' src='https://s-media-cache-ak0.pinimg.com/564x/8a/30/89/8a30894b407ca6f08bdd7036010c2d2c.jpg'> </img>
+              <img class='img-responsive' src='images/test_6.jpg'/>
             </a>
         </div>
       </div>
