add loading spinner

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -47,6 +47,10 @@
         <div class="col-sm-offset-3 col-sm-6">
           <h1 id="result-word" class="text-center"><small>Introduce un número</small></h1>
         </div>
+
+        <div class="col-xs-offset-4 col-xs-4 text-center">
+            <span id="grid-spinner" class="glyphicon glyphicon-refresh glyphicon-spin" style="display:none"></span>
+        </div>
       </div>
     </div>
 
