add voice recording js to client

--- a/client/test/index.html
+++ b/client/test/index.html
@@ -44,6 +44,7 @@
   <script src="../app/scripts/matchlist.js"></script>
   <script src="../app/scripts/consonantstable.js"></script>
   <script src="../app/scripts/mnemonic.js"></script>
+  <script src="../app/scripts/recorder.js"></script>
   <script src="../app/scripts/main.js"></script>
 
   <!-- include spec files here... -->
