--- a/client/app/index.html
+++ b/client/app/index.html
@@ -32,6 +32,10 @@
         <div class="col-xs-offset-2 col-xs-8 col-sm-4 col-sm-offset-4">
           <div class="navbar-form" role="search">
             <div class="input-group">
+              <div style="display: none;"class="input-group-btn">
+                <button id="record-button" class="btn btn-default"><i class="glyphicon glyphicon-comment"></i></button>
+                <button id="stop-button" class="btn btn-default"><i class="glyphicon glyphicon-volume-off"></i></button>
+              </div>
               <input type="text" class="form-control" placeholder="Buscar" id="numbers-input">
               <div class="input-group-btn">
                 <button id="search-button" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
@@ -93,6 +97,7 @@
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/masonry/dist/masonry.pkgd.js"></script>
+    <script src="/bower_components/msr/MediaStreamRecorder.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -117,6 +122,7 @@
     <script src="scripts/consonantstable.js"></script>
     <script src="scripts/mnemonic.js"></script>
     <script src="scripts/helpers.js"></script>
+    <script src="scripts/recorder.js"></script>
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
     </body>
