--- a/client/app/index.html
+++ b/client/app/index.html
@@ -32,7 +32,7 @@
         <div class="col-xs-offset-2 col-xs-8 col-sm-4 col-sm-offset-4">
           <div class="navbar-form" role="search">
             <div class="input-group">
-              <div style="display: none;"class="input-group-btn">
+              <div class="input-group-btn" style="display:none">
                 <button id="record-button" class="btn btn-default"><i class="glyphicon glyphicon-comment"></i></button>
                 <button id="stop-button" class="btn btn-default"><i class="glyphicon glyphicon-volume-off"></i></button>
               </div>
@@ -61,9 +61,10 @@
     <div class="container">
       <div class="row" id="image-grid">
         <div class="grid-item col-md-4 col-xs-4">
-            <a class="thumbnail">
+            <div class="thumbnail selected-wrapper">
               <img class='img-responsive' src='images/test_1.jpg'/>
-            </a>
+              <span class='glyphicon glyphicon-heart' ></span>
+            </div>
         </div>
         <div class="grid-item col-md-4 col-xs-4">
             <a class="thumbnail">
