create favorites storages

--- a/client/test/index.html
+++ b/client/test/index.html
@@ -20,6 +20,8 @@
   <script src="../bower_components/sinon/lib/sinon/util/fake_xdomain_request.js"></script>
   <script src="../bower_components/sinon/lib/sinon/util/fake_xml_http_request.js"></script>
   <script src="../bower_components/sinon/lib/sinon/util/fake_server.js"></script>
+  <script src="../bower_components/sinon/lib/sinon/call.js"></script>
+  <script src="../bower_components/sinon/lib/sinon/spy.js"></script>
   <script src="../bower_components/jquery/dist/jquery.min.js"></script>
   <script>
     var assert = chai.assert;
@@ -41,6 +43,7 @@
 
   <!-- include source files here... -->
   <script src="../app/scripts/helpers.js"></script>
+  <script src="../app/scripts/favorites.js"></script>
   <script src="../app/scripts/matchlist.js"></script>
   <script src="../app/scripts/consonantstable.js"></script>
   <script src="../app/scripts/mnemonic.js"></script>
