highlights image when clicked as favorite

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -63,7 +63,7 @@
         <div class="grid-item col-md-4 col-xs-4">
             <div class="thumbnail selected-wrapper">
               <img class='img-responsive' src='images/test_1.jpg'/>
-              <span class='glyphicon glyphicon-heart' ></span>
+              <span class='fav-icon glyphicon glyphicon-heart' ></span>
             </div>
         </div>
         <div class="grid-item col-md-4 col-xs-4">
@@ -124,6 +124,8 @@
     <script src="scripts/mnemonic.js"></script>
     <script src="scripts/helpers.js"></script>
     <script src="scripts/recorder.js"></script>
+    <script src="scripts/favoritesstorage.js"></script>
+    <script src="scripts/favorites.js"></script>
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
     </body>
