--- a/client/test/index.html
+++ b/client/test/index.html
@@ -43,6 +43,7 @@
 
   <!-- include source files here... -->
   <script src="../app/scripts/helpers.js"></script>
+  <script src="../app/scripts/favoritesstorage.js"></script>
   <script src="../app/scripts/favorites.js"></script>
   <script src="../app/scripts/matchlist.js"></script>
   <script src="../app/scripts/consonantstable.js"></script>
