store favs in browsers localstorage

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -49,7 +49,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-offset-3 col-sm-6">
-          <h1 id="result-word" class="text-center"><small>Introduce un número</small></h1>
+          <h1 class="text-center"><small id="result-word">Introduce un número</small></h1>
         </div>
 
         <div class="col-xs-offset-4 col-xs-4 text-center">
@@ -62,33 +62,33 @@
       <div class="row" id="image-grid">
         <div class="grid-item col-md-4 col-xs-4">
             <div class="thumbnail selected-wrapper">
-              <img class='img-responsive' src='images/test_1.jpg'/>
+              <img class='img-responsive result' src='images/test_1.jpg'/>
               <span class='fav-icon glyphicon glyphicon-heart' ></span>
             </div>
         </div>
         <div class="grid-item col-md-4 col-xs-4">
             <a class="thumbnail">
-              <img class='img-responsive' src='images/test_2.jpg'/>
+              <img class='img-responsive result' src='images/test_2.jpg'/>
             </a>
         </div>
         <div class="grid-item col-md-4 col-xs-4">
             <a class="thumbnail">
-              <img class='img-responsive' src='images/test_3.jpg'/>
+              <img class='img-responsive result' src='images/test_3.jpg'/>
             </a>
         </div>
         <div class="grid-item col-md-4 col-xs-4">
             <a class="thumbnail">
-              <img class='img-responsive' src='images/test_4.jpg'/>
+              <img class='img-responsive result' src='images/test_4.jpg'/>
             </a>
         </div>
         <div class="grid-item col-md-4 col-xs-4">
             <a class="thumbnail">
-              <img class='img-responsive' src='images/test_5.jpg'/>
+              <img class='img-responsive result' src='images/test_5.jpg'/>
             </a>
         </div>
         <div class="grid-item col-md-4 col-xs-4">
             <a class="thumbnail">
-              <img class='img-responsive' src='images/test_6.jpg'/>
+              <img class='img-responsive result' src='images/test_6.jpg'/>
             </a>
         </div>
       </div>
