remove msr dependency

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -32,7 +32,7 @@
         <div class="col-xs-offset-2 col-xs-8 col-sm-4 col-sm-offset-4">
           <div class="navbar-form" role="search">
             <div class="input-group">
-              <div class="input-group-btn" style="display:none">
+              <div class="input-group-btn" >
                 <button id="record-button" class="btn btn-default"><i class="glyphicon glyphicon-comment"></i></button>
                 <button id="stop-button" class="btn btn-default"><i class="glyphicon glyphicon-volume-off"></i></button>
               </div>
@@ -98,7 +98,6 @@
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/masonry/dist/masonry.pkgd.js"></script>
-    <script src="/bower_components/msr/MediaStreamRecorder.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
